アイテム名、タグ名の表示修正

--- a/src/main/resources/assets/fgomod/lang/en_us.json
+++ b/src/main/resources/assets/fgomod/lang/en_us.json
@@ -1,6 +1,6 @@
 {
 	"itemGroup.fgomod": "FgoMod",
 
-	"item.fgomod.quantum_piece": "Quantum Piece",
+	"item.fgomod.quantum_piece": "Quantum Piece"
 
 }
