--- a/src/main/resources/assets/fgomod/lang/en_us.json
+++ b/src/main/resources/assets/fgomod/lang/en_us.json
@@ -1,6 +1,9 @@
 {
 	"itemGroup.fgomod": "FgoMod",
 
-	"item.fgomod.quantum_piece": "Quantum Piece"
+	"item.fgomod.quantum_piece": "Quantum Piece",
 
+	"item.fgomod.mana_prism": "Mana Prism",
+
+	"item.fgomod.rare_prism": "Rare Prism"
 }
